Port away from requests -> urllib3 for thread-safety. Resolves #144.

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ commands =
 deps =
     pytest
     pytest-rerunfailures
+    requests
 commands =
     py.test --reruns=3 {posargs:consul tests} 
 
@@ -35,6 +36,7 @@ deps =
     tornado
     aiohttp
     flake8
+    requests
 commands =
     py.test --reruns=3 {posargs:consul tests}
     flake8 --exclude=".tox/*,xx/*,__*,docs/*"
@@ -50,6 +52,7 @@ deps =
     tornado
     aiohttp
     flake8
+    requests
 commands =
     py.test --reruns=3 {posargs:consul tests}
     flake8 --exclude=".tox/*,xx/*,__*,docs/*"
