Get tests running at least for Python3.x.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, py26, py27, pypy, py35, py36
+envlist = flake8, py26, py27, pypy, py35, py36, py37
 
 [flake8]
 ignore = F811,E226
@@ -42,6 +42,22 @@ commands =
     flake8 --exclude=".tox/*,xx/*,__*,docs/*"
 
 [testenv:py36]
+deps =
+    pytest
+    pytest-rerunfailures
+    pytest-twisted
+    twisted
+    treq
+    pyOpenSSL
+    tornado
+    aiohttp
+    flake8
+    requests
+commands =
+    py.test --reruns=3 {posargs:consul tests}
+    flake8 --exclude=".tox/*,xx/*,__*,docs/*"
+
+[testenv:py37]
 deps =
     pytest
     pytest-rerunfailures
