python_consul: Added support for ARM64
Add consul.aarch64 file to support for ARM64
Corrected the warning related to python "async" keyword
Remove support for python2.6

Signed-off-by: ossdev <ossdev@puresoftware.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, py26, py27, pypy, py35, py36
+envlist = flake8, py27, pypy, py35, py36
 
 [flake8]
 ignore = F811,E226
@@ -16,13 +16,6 @@ deps =
     pyOpenSSL
 commands =
     py.test --reruns=3 {posargs:consul tests}
-
-[testenv:py26]
-deps =
-    pytest
-    pytest-rerunfailures
-commands =
-    py.test --reruns=3 {posargs:consul tests} 
 
 [testenv:py35]
 deps =
